--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         }
     </script>
 
+    <footer class="footer">
+        <p>Developed by KOUSHIK &copy; 2024. All rights reserved.</p>
+    </footer>
+
 
 </body>
 </html>
